--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,20 +1,20 @@
 <div class="grid">
   <div class="col-12">
     <div class="flex justify-content-center align-center text-align-center">
-      <form *ngIf="loginCard">
+      <form [formGroup]="loginForm" *ngIf="loginCard" (ngSubmit)="onSubmitLoginForm()">
         <p-card
           styleClass="mt-10"
           header="Login"
           subheader="Faça login com sua conta existente!"
         >
           <div class="flex justify-content-center align-center text-align-center">
-            <input type="email" pInputText placeholder="email" />
+            <input type="email" pInputText placeholder="email" formControlName="email"/>
           </div>
           <div class="flex justify-content-center align-center text-align-center mt-3">
-            <input type="password" pInputText placeholder="Senha" />
+            <input type="password" pInputText placeholder="Senha" formControlName="password"/>
           </div>
           <div class="card flex justify-content-center mt-3">
-            <button type="submit" pButton pRipple label="Login"></button>
+            <button type="submit" pButton pRipple label="Login" [disabled]="!this.loginForm.valid"></button>
           </div>
           <span style="cursor: pointer;" (click)="loginCard = !loginCard" class="flex justify-content-center align-center text-align-center mt-3 text-red-600 font-semibold" >
             Criar Conta
@@ -22,24 +22,24 @@
       </p-card>
       </form>
 
-      <form *ngIf="!loginCard">
+      <form *ngIf="!loginCard" [formGroup]="signupForm" (ngSubmit)="onSubmitSignUpForm()">
         <p-card
           styleClass="mt-10"
           header="Criar Conta"
           subheader="Criar conta gratuita"
         >
           <div class="flex justify-content-center align-center text-align-center mt-3">
-            <input type="text" pInputText placeholder="Nome" />
+            <input type="text" pInputText placeholder="Nome" formControlName="nome"/>
           </div>
 
           <div class="flex justify-content-center align-center text-align-center mt-3">
-            <input type="email" pInputText placeholder="Email" />
+            <input type="email" pInputText placeholder="Email" formControlName="email"/>
           </div>
           <div class="flex justify-content-center align-center text-align-center mt-3">
-            <input type="password" pInputText placeholder="Senha" />
+            <input type="password" pInputText placeholder="Senha" formControlName="password"/>
           </div>
           <div class="card flex justify-content-center mt-3">
-            <button type="submit" pButton pRipple label="Criar Conta"></button>
+            <button type="submit" pButton pRipple label="Criar Conta" [disabled]="!this.signupForm.valid"></button>
           </div>
           <span (click)="loginCard = !loginCard" class="flex justify-content-center align-center text-align-center mt-3 text-red-600 font-semibold"
           style="cursor: pointer;" >
