--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -29,7 +29,7 @@
           subheader="Criar conta gratuita"
         >
           <div class="flex justify-content-center align-center text-align-center mt-3">
-            <input type="text" pInputText placeholder="Nome" formControlName="nome"/>
+            <input type="text" pInputText placeholder="Nome" formControlName="name"/>
           </div>
 
           <div class="flex justify-content-center align-center text-align-center mt-3">
