--- a/src/app/shared/components/toolbar-navegation/toolbar-navegation.component.html
+++ b/src/app/shared/components/toolbar-navegation/toolbar-navegation.component.html
@@ -34,4 +34,11 @@
     class="mr-2"
     ></p-button>
 </div>
+
+<div class="p-toolgroup-end">
+  <p-button (onClick)="handleLogout()" label="Sair"
+  icon="pi pi-sign-out"
+  styleClass="p-button-danger">
+
+</p-button></div>
 </p-toolbar>
